2004/11/21 Morgan Christiansson <drftpd@mog.se>
* Fixed shutdown in perms.conf to behave like it does in glftpd.
* Added site find -incomplete [min % incomplete] and fixed
  site find -action wipe with multiple entries to wipe.
* Fixed FinishReleaseOnSlaves ArchiveType

2004/11/14 Morgan Christiansson <drftpd@mog.se>
* Changed DELE to update stats aswell as credits.
* Changed SiteBot to use correct section when dated section was used but
  the current dir wasn't used for the upload.

2004/11/12 Morgan Christiansson <drftpd@mog.se>
* Made empty filterchains valid.

2004/11/09 Morgan Christiansson <drftpd@mog.se>
* Added getUser() to InviteEvent at request from beepboop.
* Added BINVITE event that is dispatched on /msg !invite with bad pass.
* Started using generics on master which breaks pre-5.0 JDK compatibility.
* slave.jar is more lightweight now, and keeps 1.3/1.4 compatibility.
* net.sf.drftpd.slave is no more, welcome org.drftpd.slave.

2004/11/08 Morgan Christiansson <drftpd@mog.se>
* Added better handling of file collisions, files are now checksummed 
  in multiple threads and if checksums are identical all but one file is deleted.

2004/11/06 Morgan Christiansson <drftpd@mog.se>
* Continued usermanager cleanup/rewrite.
* Fixed UserManagerConverter with support for converting from 1.1.4 userfiles.

2004/11/03 Morgan Christiansson <drftpd@mog.se>
* Changed userfile directories from {jsx,xstream} to {jsx,xstream}2.
* Renamed usermanagers.
* Integrated and rewrote iamn's dynamic user data plugin.

2004/11/02 Morgan Christiansson <drftpd@mog.se>
* Improved security in SITE CHANGE.
* Revived Mirror plugin, needed for instant mirroring which Archive can't provide.

2004/10/06  Teflon <teflon114@@users.sourceforge.net>
* Fixed root cause of "group= iND" bug in files.mlst

2004/10/05 Morgan Christiansson <drftpd@mog.se>
* Fixed purge with JSXUserManager.
* Added wkly_allotment to SITE USER environment and rewrote .properties format
  for SITE USER output.